viewer prototype and humans.txt logo

--- a/viewer.html
+++ b/viewer.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
-    <h2>TODO</h2>
+    <div id="main">
+        <header>
+            <figure>
+                <img src="logo-humans.png" />
+            </figure>
+            
+            Who built this website?
+        </header>
+    </div>
 </body>
 </html>
